tests/invalid/circular_dependency/b.py
from a import a_func

def b_func() -> int:
    return a_func() + 1